# discord-smp-link

./: .dockerignore  .env  .env.example  .gitignore  Caddyfile  Cargo.toml  Config.example.ron  Dockerfile  Justfile  README.md  Rocket.toml  Schema.tldr  askama.toml  build.rs  diesel.toml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  flake.nix  rust-toolchain.toml  transform.vrl  vector.toml
.cargo/: config.toml
.github/workflows/: rust.yml
infrastructure/: client_setup.yaml  main.tf  outputs.tf
migrations/2022-04-02-174531_create_guilds/: up.sql
migrations/2022-04-03-081641_create_members/: up.sql
migrations/2022-04-03-081641_create_users/: up.sql
migrations/2022-06-10-175900_create_verified_members/: down.sql  up.sql
migrations/2022-09-11-085036_create_guilds_members_and_verified_members/: down.sql  up.sql
migrations/2022-09-11-101953_create_member_groups/: down.sql  up.sql
public/: site.webmanifest  style.css
server/static/: style.css
server/templates/: index.hbs  index.jinja
server/templates/auth/: error.hbs  error.jinja  success.hbs  success.jinja
src/: auth.rs  constants.rs  logging.rs  main.rs  polyfill.rs  states.rs  translation.rs
src/commands/: class.rs  classes.rs  groups.rs  helpers.rs  information.rs  levels.rs  login.rs  mod.rs  setup.rs  test.rs
src/commands/helpers/: force.rs  mod.rs  refresh.rs  register.rs
src/commands/setup/: groups_message.rs  login_message.rs  message.rs  mod.rs  role.rs
src/database/: mod.rs  models.rs  query.rs  schema.rs  triggers.rs
src/events/: groups.rs  login.rs  logout.rs  mod.rs
src/handlers/: auth.rs  mod.rs  server.rs
src/handlers/server/: handler.rs  mod.rs  templates.rs  tls_server.rs
src/logging/: discord.rs  mod.rs  term_write.rs
src/server/: error.rs  handler.rs  mod.rs  tls_server.rs
templates/: 404.html.tera  404.jinja  500.html.tera  500.jinja  _base.jinja  _logos.jinja  auth.html.tera  auth.jinja  contact.html.tera  contact.jinja  index.html.tera  index.jinja  privacy-policy.html.tera  privacy-policy.jinja  terms-and-conditions.html.tera  terms-and-conditions.jinja
translations/: en-US.ftl  fr.ftl
