[package]
name = "discord_smp_link"
version = "0.1.0"
description = "A link between a discord guild and a google account"
repository = "https://github.com/MrNossiom/discord-smp-link"
keywords = ["discord", "google", "oauth2"]
categories = ["authentication"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
console-subscriber = "0.1.8"
diesel-async = { version = "0.2.0", features = ["mysql", "deadpool"] }
diesel_migrations = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15.6"
fluent = "0.16.0"
fluent-syntax = "0.11.0"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = { version = "0.23.2", features = ["rustls-native-certs"] }
intl-memoizer = "0.5.1"
oauth2 = "4.3.0"
poise = { git = "https://github.com/kangalioo/poise", branch = "develop" }
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
thiserror = "1.0.38"
secrecy = "0.8.0"
serde = "1.0.151"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full", "tracing"] }
tokio-rustls = "0.23.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
	"registry",
	"env-filter",
	"json",
] }
unic-langid = { version = "0.9.1", features = ["macros"] }
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.3.1"
pin-project = "1.0.12"

[dependencies.diesel]
version = "2.0.2"
default-features = false
features = ["mysql"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["rustls-tls-native-roots"]


[profile.release]
strip = true
opt-level = 3
lto = true
